Release Notes for the event package
-----------------------------------
R4.5.2  2020-06-13 Bruce Hill
	Fix RESTORE install of cwconfig files.
	Note: Removed old variant of RULES.Restore that used RESTORES
	keyword instead of the standard RESTORE keyword in our EPICS base
	RULES.Restore file.  If you have an IOC or module which depends
	on the event module and used the RESTORES keyword to install cwconfig
	files, please change to use the singular form, RESTORE.

R4.5.1  04/03/2020 K. Kim (khkim)
        * force tag R4.5.1
        * fix overiding SYNK_SIZE for intermmeidate substitutions

R4.5.1  03/23/2020 K. Kim (khkim)
        * force tag R4.5.1
        * fix typo in bsaATTREdef.substitutions

R4.5.1  03/13/2020 K. Kim (khkim)
        * force tag R4.5.1
        * rename the bsa archive template to bsaArchivePVs.tpl-arch
        * set archive 1 second monitoring

R4.5.1  03/12/2020 K. Kim (khkim)
        * force tag R4.5.1
        * add bsa archive template - bsaArchivePVs.template

R4.5.1  02/26/2020 K. Kim (khkim)
        * force tag R4.5.1
        * fix a typo in bsaATTREdef.substitutions

R4.5.1  02/13/2020 K. Kim (khkim)
        * force tag R4.5.1
        * update order for system EDEFs (invariant names for 1H, TH, BR)

R4.5.1  02/06/2020 K. Kim
        * resotre back SINK_SIZE macro and put default: on demand SINK_SIZE=10, system SINK_SIZE=1
        * remove PIDHST from the bsa history buffer to reduce CPU load
        * build with BsaCore R1.5.3

---------
brach out to R4.5.0-br_remove_bsa   02/06/2020 K. Kim
---------

R4.5.0  12/06/2019 C. Bianchini
        * Changed system EDEFs: bsaATTREdef.substitutions and bsaProcTestAll.substitutions
              {  $(DEVICE)  ,11,   11, $(LOC)    }
              {  $(DEVICE)  ,12,   1H, $(LOC)    }
              {  $(DEVICE)  ,13,   TH, $(LOC)    }
              {  $(DEVICE)  ,14,   BR, $(LOC)    }
              {  $(DEVICE)  ,15,   CUS1H, $(LOC)    }
              {  $(DEVICE)  ,16,   CUSTH, $(LOC)    }