@@ -1,0 +1,15 @@
+#ifndef   INCwrapBsaCbH
+#define   INCwrapBsaCbH
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+void wrapBsaCb(BsaTimingCallback cb, void *pcbArg, BsaTimingData *pbsaData, unsigned long *cnt);
+
+
+#ifdef __cplusplus
+}  /* extern C */
+#endif
+
+#endif /* INCwrapBsaCbH */
